
WhiteCore-Sim (Dev) 
Rowan D <greythane@gmail.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Dec 23rd, 2013
Merged patched applied to Aurora(Master)

Alicia Raven - Fix Bug #1261. Prevent bots being added to currency table. With bots
having random UUID every time they restart, this soon would get out of
hand with trash data.
	- Whitecore(Aurora)/Modules/Avatar/Currency/Simple.CurrencyConnector.cs
mdickson - Updated Texture Fetching to handle bytes=start- and bytes=-end which the newer viewers will send.
	- WhiteCore(Aurora)/Services/GenericServices/CapsService/CAPModules/AssetCAPS.cs
mdickson - Removed uneeded LINUX conditional around LSLFload operators It causes errors on Mono compiles.
	(Corrected this myself prior to this commit :) )
	- WhiteCore(Aurora)/WhiteCoreDotNetEngine(AuroraDotNetEngine)/APIs/LSL_Types.cs






Dec 17th, 2013
Refactored Main Aurora-Sim code to WhiteCore to allow continued development
All development moved to WhiteCore

----------------------------------

## Aurora-Sim-Dev ##
Dec 6th, 2013
* Aurora.Framework.Utilities - utilities.cs
	Update GetServerReleaseNotesURL() and GetAddress() to return the defined hostname as specified in the 
	Aurora.ini ( will return external IP if not defined)


<< TerrainGenerator branch >>
* Aurora.Framework.SceneInfo - TerrainChannel.cs
	Added additional perlinNoise generation code - TerrainPerlin.cs
	Modified CreateDefaultTerrain() to pass the landtype entered during console region creation
	Added additional and overide creation procedures for Flatland, Mainland and Island 
	Added GenerateTerrain() to allow user generation of terrain from a console command
* Aurora.Modules.World.Terrain - TerrainModule.cs  
	Added InterfaceGenerateTerrain() for user access to terrain generation
	Added appropriate console command and help details
* Aurora.Modules.World.Startup - FileBasedSimulationData.cs
	Changed default land type to "Flatland" when creating new regions, to avoid confusion with the new "Mainland"

  Oct 2nd 2013