@@ -109,20 +109,20 @@ namespace OpenSim.Region.Physics.ConvexDecompositionDotNet
             float dy = bmax[1] - bmin[1];
             float dz = bmax[2] - bmin[2];
 
-            float laxis = dx;
+// 20131224 not used            float laxis = dx;
 
             int axis = 0;
 
             if (dy > dx)
             {
                 axis = 1;
-                laxis = dy;
+// 20131224 not used                laxis = dy;
             }
 
             if (dz > dx && dz > dy)
             {
                 axis = 2;
-                laxis = dz;
+// 20131224 not used                laxis = dz;
             }
 
             float[] p1 = new float[3];
