@@ -1,0 +1,26 @@
+// add something like this when suggesting the port for a new (created) region
+// FileBasedSimulationData.cs (Modules.Startup)
+
+				List<TerrainModule> m = FindModuleForScene(MainConsole.Instance.ConsoleScene);
+				foreach (TerrainModule tmodule in m)
+				{
+					if (tmodule.RegionInfo.RegionPort >= info.RegioPort)
+					{
+						info.RegionPort ++;
+					}
+				}
+
+
+
+
+
+## TO DO ##
+Dec 24, 2013 
+CSCodeGenerator - Code commented out because the return value is not used.
+Check functionality as the relevant function may be totally broken
+
+WhiteCoreOpenDynamicsEngine - AODEPhysicsScene.cs 
+private void near(IntPtr space, IntPtr g1, IntPtr g2)
+ - reference is made to maxContact but code has been commented out due to reported crashes
+   >> need to re-check
+   
